# Small_World_Board_Game

./: Amazons.h  CMakeLists.txt  ClassDiagram.cd  Combo.cpp  Combo.h  ComboList.cpp  ComboList.h  Dwarves.cpp  Dwarves.h  Elves.cpp  Game.cpp  Game.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  Player.cpp  Player.h  Race.cpp  Race.h  Region.cpp  Region.h  dice.cpp  dice.h  fivePlayer.map  fourPlayer.map  invaildMap1.map  invaildMap2.map  invaildMap3.map  main.cpp  part3.docx  part4.docx  test.txt  threePlayer.map  twoPlayer.map  twoPlayerRegions.cpp
DesignPattern/: Observer.cpp  Observer.h  PlayerObserver.cpp  PlayerObserver.h  Subject.cpp  Subject.h
Power/: Alchemist.cpp  Alchemist.h  Berserk.cpp  Berserk.h  Bivouacking.cpp  Bivouacking.h  Commando.cpp  Commando.h  Diplomat.cpp  Diplomat.h  DragonMaster.cpp  DragonMaster.h  Flying.cpp  Flying.h  Forest.cpp  Forest.h  Fortified.cpp  Fortified.h  Heroic.cpp  Heroic.h  Hill.cpp  Hill.h  Merchant.cpp  Merchant.h  Mounted.cpp  Mounted.h  Pillaging.cpp  Pillaging.h  Power.cpp  Power.h  Seafaring.cpp  Seafaring.h  Shuffler.cpp  Shuffler.h  Spirit.cpp  Spirit.h  Stout.cpp  Stout.h  Swamp.cpp  Swamp.h  (+4 more)
Race/: Amazons.cpp  Dwarves.cpp  Dwarves.h  Elves.cpp  Elves.h  Ghouls.cpp  Ghouls.h  Giants.cpp  Giants.h  Halflings.cpp  Halflings.h  Humans.cpp  Humans.h  Orcs.cpp  Orcs.h  Race.cpp  Race.h  Ratmen.cpp  Ratmen.h  Skeletons.cpp  Skeletons.h  Sorcerers.cpp  Sorcerers.h  Tritons.cpp  Tritons.h  Trolls.cpp  Trolls.h  Wizards.cpp  Wizards.h
decorator/: BasicView.cpp  BasicView.h  CoinsView.cpp  CoinsView.h  DominationView.cpp  DominationView.h  HandsView.cpp  HandsView.h  VictoryCoinsView.cpp  VictoryCoinsView.h  ViewDecorator.cpp  ViewDecorator.h
gamePieces/: Dragon.cpp  Dragon.h  Encampments.cpp  Encampments.h  Fortresses.cpp  Fortresses.h  GamePieces.cpp  GamePieces.h  Heroes.cpp  Heroes.h  Holes_inthe_Ground.cpp  Holes_inthe_Ground.h  Mountains.cpp  Mountains.h  TrollLairs.cpp  TrollLairs.h
regions/: MapRegions.cpp  MapRegions.h  Region.cpp  Region.h  RegionBuilder.cpp  RegionBuilder.h  TwoPlayerRegions.cpp  TwoPlayerRegions.h  twoPlayerRegions.h
statistics/: StatisticsObserver.cpp  StatisticsObserver.h  StatisticsPublisher.cpp  StatisticsPublisher.h
strategy/: AggressiveStrategy.cpp  AggressiveStrategy.h  DefensiveStrategy.cpp  DefensiveStrategy.h  ModerateStrategy.cpp  ModerateStrategy.h  PlayGame.cpp  PlayGame.h  PlayerStrategy.h  RandomStrategy.cpp  RandomStrategy.h
